# titan-vmos

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BNPL-FINTECH-BANKING-ANALYSIS.md  GENESIS-ENGINE-TESTING-GUIDE.md  ON-DEVICE-AI-DEPLOYMENT-REPORT.md  README.md  VMOS-DEEP-ANALYSIS-REPORT.md  VMOS_INTEGRATION.md  VMOS_VERIFICATION_REPORT.md  build-deb.sh  explore_toolbox.py  explore_toolbox2.py  practical_coding_agent_instructions_1.txt  practical_coding_agent_instructions_2.txt  practical_coding_agent_instructions_3.txt  pyproject.toml  requirements.txt  titan-api-v13.service  toolbox_probe.py  venv
.github/: copilot-instructions.md
attic/: _debug_vmos.py  _debug_vmos2.py  _debug_vmos3.py  _debug_vmos4.py  _debug_vmos5.py  _patch_and_inject.py  _patch_identity.py  _vmos_audit_v2.py  _vmos_audit_v3.py  _vmos_diag.py  _vmos_full_audit.py  _vmos_screen_ai.py  anomaly_report_ACP2509244LGV1MV.json  patch_results_ACP2509244LGV1MV.json  retry_vmos_patch.py  test_vmos_pipeline.py  vmos_anomaly_scan.py  vmos_auto_patch.py  vmos_device_dump.py  vmos_fast_scan.py  vmos_full_scan.py
console/: index.html  manifest.json  setup.html
core/: __init__.py  aging_report.py  ai_intelligence_engine.py  android_profile_forge.py  anomaly_patcher.py  bin_database.py  circuit_breaker.py  coherence_bridge.py  device_manager.py  device_state_db.py  forensic_monitor.py  ghost_sim.py  google_account_injector.py  google_master_auth.py  keybox_manager.py  kyc_core.py  play_integrity_spoofer.py  profile_injector.py  scenario_runner.py  sensor_simulator.py  trust_scorer.py  unified_genesis_engine.py  vmos_cloud_api.py  vmos_db_builder.py  vmos_file_pusher.py  vmos_genesis_engine.py  vmos_nexus_runner.py  wallet_provisioner.py
data/: data
debian/: control  postinst  titan-api.service  titan-nginx.service  titan-recovery.service  titan-scrcpy.service
desktop/: main.js  package.json
device-viewer/: package-lock.json  package.json
docker/: Dockerfile.redroid-gms  Dockerfile.titan-api  Dockerfile.titan-api-prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf
docs/: 00-overview.md  01-device-manager.md  02-anomaly-patcher.md  03-genesis-pipeline.md  04-profile-injector.md  05-wallet-injection.md  06-ai-agent.md  07-titan-console.md  08-intelligence-tools.md  09-network-kyc.md  10-training-pipeline.md  11-real-world-success-rates.md  12-genesis-payment-analysis.md  13-genesis-gap-analysis-upgrade-plan.md  GENESIS-V3-MASTER-TECHNICAL-DOCUMENTATION.md  README.md  VMOS Cloud API Documentation Research.txt  VMOS-DEEP-DEVICE-ANALYSIS-149.md  VMOS-DEVICE-EXPLORATION-REPORT.md  cuttlefish-training-replan.md  provincial-injection-protocol.md  v12-upgrade-plan.md
ob agen/: Operations.Manual.txt  Prometheus.Unified.Core.v2.1.txt  System.Prompt.txt
scripts/: README_photo_downloader.md  deploy_cloud_phone.sh  deploy_titan_v11.3.sh  e2e_ovh_full.py  forge_jovany_500d_full.py  forge_jovany_owens_vmos.py  forge_pipeline.py  format_vps.py  genesis_jovany_owens_500d.py  genesis_orchestrator.py  recreate_jovany_from_md.py  recycle_forge.py  register_oracle_device.py  requirements_photo_downloader.txt  setup_cuttlefish.sh  setup_ovh_desktop.sh  visual_pipeline_test.py  vmos_inject_genesis.py
server/: titan_api.py
templates/: index.html
(+172 files in other folders)
